kubernetes/deploy/bitwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden
  namespace: bitwarden
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bitwarden
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bitwarden
    spec:
      containers:
      - env:
        - name: ROCKET_PORT
          value: "8080"
        - name: SIGNUPS_ALLOWED
          value: "true"
        - name: SIGNUPS_VERIFY
          value: "true"
        - name: REQUIRE_DEVICE_EMAIL
          value: "true"
        - name: INVITATIONS_ALLOWED
          value: "true"
        - name: SHOW_PASSWORD_HINT
          value: "false"
        - name: WEBSOCKET_ENABLED
          value: "true"
        - name: WEB_VAULT_ENABLED
          value: "true"
        - name: SENDS_ALLOWED
          value: "true"
        - name: ORG_CREATION_USERS
          value: all
        - name: ENABLE_DB_WAL
          value: "true"
        - name: DOMAIN
          value: https://password.vandeneede.org
        - name: ADMIN_TOKEN
          valueFrom:
            secretKeyRef:
              key: admin-token
              name: bitwarden-admtoken
        - name: EMERGENCY_ACCESS_ALLOWED
          value: "true"
        - name: SMTP_HOST
          value: email-smtp.eu-central-1.amazonaws.com
        - name: SMTP_FROM
          value: password@vandeneede.org
        - name: SMTP_FROM_NAME
          value: Password Manager
        - name: SMTP_SECURITY
          value: starttls
        - name: SMTP_PORT
          value: "587"
        - name: SMTP_AUTH_MECHANISM
          value: Login
        - name: SMTP_TIMEOUT
          value: "15"
        - name: SMTP_USERNAME
          valueFrom:
            secretKeyRef:
              key: smtp-user
              name: bitwarden-smtp
        - name: SMTP_PASSWORD
          valueFrom:
            secretKeyRef:
              key: smtp-password
              name: bitwarden-smtp
        image: vaultwarden/server:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: bitwarden
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 3012
          name: websocket
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        securityContext:
          runAsGroup: 65534
          runAsUser: 65534
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: bitwarden-vc
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext:
        fsGroup: 65534
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      volumes:
      - name: bitwarden-vc
        persistentVolumeClaim:
          claimName: bitwarden-vc
